
# Add all needed boost modules as subdirectories

add_subdirectory(config-develop)
add_subdirectory(assert-develop)
add_subdirectory(core-develop)
add_subdirectory(concept_check-develop)
add_subdirectory(container_hash-develop)
add_subdirectory(conversion-develop)
add_subdirectory(detail-develop)
add_subdirectory(function_types-develop)
add_subdirectory(integer-develop)
add_subdirectory(io-develop)
add_subdirectory(iterator-develop)
add_subdirectory(move-develop)
add_subdirectory(optional-develop)
add_subdirectory(predef-develop)
add_subdirectory(preprocessor-develop)
add_subdirectory(smart_ptr-develop)
add_subdirectory(static_assert-develop)
add_subdirectory(throw_exception-develop)
add_subdirectory(type_traits-develop)
add_subdirectory(typeof-develop)
add_subdirectory(winapi-develop)
add_subdirectory(utility-develop)
add_subdirectory(system-develop)
add_subdirectory(mpl-develop)
add_subdirectory(tuple-develop)
add_subdirectory(fusion-develop)
add_subdirectory(filesystem-develop)
add_subdirectory(algorithm-develop)
